# veritas

./: .gitignore  convert_bible.py  convert_english.py  index.html  package-lock.json  package.json  tailwind.config.js
.github/: release.yml
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json  test_tauri.rs
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  lib.rs  obs.html  parser.rs  remote.html  server.rs
src/components/: Projector.tsx  RemoteConnectCard.tsx
src/components/layout/: CenterPane.tsx  LeftPane.tsx  RightPane.tsx
src/hooks/: useTauriSync.ts
src/store/: useStore.ts
src/utils/: bibleMap.ts  bibleParser.js  bibleParser.ts
